--- a/src/WebDemo/2017-10-23/js类.html
+++ b/src/WebDemo/2017-10-23/js类.html
@@ -21,6 +21,16 @@
                 console.log(this.Name);
             };
         };
+        /*
+        class Student
+        {
+            public string Name {get;set;}
+            public void sayHi()
+            {
+                Console.WriteLine(....);
+            }
+        }
+        */
 
         var stu1 = new Student();
         stu1.Name = 'jack';
