--- a/src/WebDemo/2017-10-23/js继承_原型链.html
+++ b/src/WebDemo/2017-10-23/js继承_原型链.html
@@ -51,10 +51,13 @@
 
         //三角形
         var Triangle = function (a, b, c) {
+            //先冒充对象
+            Polygon.call(this,3);
             this.A = a;
             this.B = b;
             this.C = c;
         }
+        //原型继承
         Triangle.prototype = new Polygon(3);
         Triangle.prototype.getAreas = function () {
             //海伦公式求面积
