--- a/src/WebDemo/2017-10-23/js继承_对象冒充.html
+++ b/src/WebDemo/2017-10-23/js继承_对象冒充.html
@@ -28,7 +28,7 @@
 
         //矩形
         var Rectangle = function (width, height) {
-            //冒充对象
+            //冒充对象，无法冒充原型对象属性和方法
             this.con = Polygon;
             this.con(4);
             //删除冒充对象，防止修改父类的结构
