--- a/src/WebDemo/2017-10-20/1.html
+++ b/src/WebDemo/2017-10-20/1.html
@@ -52,19 +52,22 @@
         }
     </style>
     <script>
+		//修改样式
         var changeStyle = function (elem, name, value) {
-            elem.style[name] = value
+            elem.style[name] = value;
         }
         window.onload = function () {
             var oDiv = document.getElementById("div1");
             var oBtn = document.getElementsByTagName("button");
             var oInput = document.getElementsByTagName("input");
+			//绑定确定按钮
             oBtn[0].onclick = function () {
                     changeStyle(oDiv, oInput[0].value, oInput[1].value)
-                },
-                oBtn[1].onclick = function () {
-                    oDiv.removeAttribute("style")
-                }
+                };
+			//绑定重置按钮
+			oBtn[1].onclick = function () {
+				oDiv.removeAttribute("style")
+			};
         }
     </script>
 </head>
